fix email align menu

--- a/components/Dashboard/Menu/menu.scss
+++ b/components/Dashboard/Menu/menu.scss
@@ -45,6 +45,7 @@
     font-size: 1em;
     color: #565656;
     font-weight: 500;
+    text-align: center;
     width: 90%;
     margin: 0 auto;
     margin-bottom: 10px;
